udacity-c3-deployment/kubconfig/myappinfo.yaml

##################################################################################################
# Users service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: user
  labels:
    app: user
    service: user
spec:
  ports:
    - port: 8080
      name: http-web
  selector:
    app: user
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-v1
  labels:
    app: user
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user
      version: v1
  template:
    metadata:
      labels:
        app: user
        version: v1
    spec:
      serviceAccountName: myapp-user
      containers:
      - name: user
        image: mohinigonawala90/backend-user:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /api/v0/
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /api/v0/
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 0
---
##################################################################################################
# Feed service
##################################################################################################

apiVersion: v1
kind: Service
metadata:
  name: feed
  labels:
    app: feed
    service: feed
spec:
  ports:
    - port: 8080
      name: http-web
  selector:
    app: feed
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-v1
  labels:
    app: feed
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
      version: v1
  template:
    metadata:
      labels:
        app: feed
        version: v1
    spec:
      serviceAccountName: myapp-feed
      containers:
        - image: mohinigonawala90/backend-feed:v1.0.0
          name: feed
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /api/v0/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v0/probe
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 0
          volumeMounts:
            - name: aws-secret
              mountPath: "/root/.aws/"
              readOnly: true
      volumes:
        - name: aws-secret
          secret:
            secretName: aws-secret

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feed-v2
  labels:
    app: feed
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feed
      version: v2
  template:
    metadata:
      labels:
        app: feed
        version: v2
    spec:
      serviceAccountName: myapp-feed
      containers:
        - image: mohinigonawala90/backend-feed:v2.0.0
          name: feed
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /api/v0/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/v0/probe
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 0
          volumeMounts:
            - name: aws-secret
              mountPath: "/root/.aws/"
              readOnly: true
      volumes:
        - name: aws-secret
          secret:
            secretName: aws-secret
---

##################################################################################################
# Frontend service
##################################################################################################

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      version: v1
  template:
    metadata:
      labels:
        app: frontend
        version: v1
    spec:
      serviceAccountName: myapp-frontend
      containers:
        - image: mohinigonawala90/frontend:latest
          name: frontend
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 120
            periodSeconds: 0
---
apiVersion: v1
kind: Service
metadata:
  labels:
    service: frontend
  name: frontend
spec:
  ports:
    - name: "8100"
      port: 8100
      targetPort: 80
  selector:
    service: frontend
  type: LoadBalancer
